See Jira issue CAP-5 for more info